# Atlas

./: .env.example  .gitignore  pyproject.toml
config/: default.yaml  development.yaml
docs/: 00A_ATLAS_CONSTITUTION.md  00B_PRODUCT_REQUIREMENTS_DOCUMENT.md  00C_REVENUE_OPERATING_SYSTEM.md  00_PROJECT_VISION.md.txt  01A_ATLAS_OPERATIONS_CORE.md.txt  01B_ATLAS_KERNEL.md  01_SYSTEM_ARCHITECTURE.md.txt  02A_AGENT_ORGANIZATION.md.txt  02_AI_ARCHITECTURE.md.txt  03_MISSION_CONTROL.md  04_IMPLEMENTATION_ROADMAP.md  05_BROWSER_COMPANION.md.txt  06_MEMORY_ENGINE.md  07_OPPORTUNITY_ENGINE.md.txt  08_DATABASE_ARCHITECTURE.md.txt  09_UI_UX_SPECIFICATION.md.txt  10_BUILD_INSTRUCTIONS.md  ARCHITECT_REVIEW.md  README.md.txt
docs/releases/: MILESTONE_01_KERNEL.md  MILESTONE_03_MEMORY_ENGINE.md  MILESTONE_04_ATLAS_CONTEXT.md  MILESTONE_05_INTELLIGENCE_ROUTER.md  MILESTONE_06_EXECUTION_ENGINE.md  MILESTONE_07_BROWSER_COMPANION.md  MILESTONE_08_KNOWLEDGE_ENGINE.md  MILESTONE_09_STABILIZATION.md  MILESTONE_10_OPPORTUNITY_ENGINE.md  (+13 more)
tests/: conftest.py  test_agent.py  test_browser.py  test_config.py  test_configuration.py  test_connectors.py  test_context.py  test_distributed.py  test_events.py  test_execution.py  test_health.py  test_integration.py  test_intelligence.py  test_kernel.py  test_knowledge.py  test_lifecycle.py  test_memory.py  test_mission.py  test_monitor.py  test_monitor_api.py  test_multi_agent.py  test_notification.py  test_operations.py  test_opportunity.py  test_persistence.py  test_plugins.py  test_registry.py  test_security.py  test_workflow.py
(+32 files in other folders)
